--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+*::-webkit-scrollbar {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  display: none;
+}
+* {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 .App {
   text-align: center;
 }
